modify css and html file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
             <li>Contact</li>
         </ul>
     </nav>
+    <div class="content">
+        <h1> World's Best Pizza</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eveniet at dolores mollitia, pariatur autem necessitatibus, odit quo asperiores, ipsa eligendi perspiciatis perferendis distinctio voluptates voluptatem consequuntur eum voluptas minima.</p>
+    </div>
 </body>
 </html>
