--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <nav>
         <ul>
             <li>Home</li>
@@ -15,10 +16,15 @@
             <li>Contact</li>
         </ul>
     </nav>
+
     <div class="content">
-        <h1> World's Best Pizza</h1>
+        <h1>World's Best Pizza Shop</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eveniet at dolores mollitia, pariatur autem necessitatibus, odit quo asperiores, ipsa eligendi perspiciatis perferendis distinctio voluptates voluptatem consequuntur eum voluptas minima.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur dsfgd adipisicing elit. Commodi eaque aperiam htrg laborum ratione ipsa expedita asperiores minima animi adipisci dicta!</p>
+        <button>ORDER NOW</button>
     </div>
+
+    <img src="pizza.gif" alt="pizza">
+
 </body>
 </html>
